--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "animate.css": "^4.1.1",
+    "flexboxgrid": "^6.3.1",
     "gatsby": "^4.14.1",
     "gatsby-plugin-gatsby-cloud": "^4.14.0",
     "gatsby-plugin-image": "^2.14.1",
@@ -12,10 +17,12 @@
     "gatsby-plugin-offline": "^5.14.1",
     "gatsby-plugin-react-helmet": "^5.14.0",
     "gatsby-plugin-sharp": "^4.14.1",
+    "gatsby-source-contentful": "^7.12.0",
     "gatsby-source-filesystem": "^4.14.0",
     "gatsby-transformer-sharp": "^4.14.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
+    "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
   },
