--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^17.0.1",
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-scroll-section": "^3.1.0"
   },
   "devDependencies": {
     "prettier": "^2.6.2"
